# ryzomcore

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .hgeol  .hgignore  .hgtags  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CTestConfig.cmake  README.md  azure-pipelines.yml  config.h.cmake  docker-compose.yaml  path_config.bat
code/: .clang-format  .editorconfig  .hgignore  CMakeLists.txt  CTestConfig.cmake  README  acinclude.m4  config.h.cmake  nelDashBuild.cmd  revision.h.in
code/CMakeModules/: AndroidToolChain.cmake  CheckDepends.cmake  ConfigureChecks.cmake  Find3dsMaxSDK.cmake  FindCEF3.cmake  FindCEGUI.cmake  FindCppTest.cmake  FindCustomMFC.cmake  FindDirectXSDK.cmake  FindEFXUtil.cmake  FindExternal.cmake  FindFMOD.cmake  FindFreeType.cmake  FindGOBJECT2.cmake  FindGTK2.cmake  FindHelpers.cmake  FindIconv.cmake  FindJpeg.cmake  FindLibOVR.cmake  FindLibVR.cmake  FindLibwww.cmake  FindLua53.cmake  FindLuabind.cmake  FindMSVC.cmake  FindMercurial.cmake  FindMySQL.cmake  FindNeL.cmake  FindOgg.cmake  FindOpenGLES.cmake  FindRyzomGameShare.cmake  FindSDL2.cmake  FindSTLport.cmake  FindSquish.cmake  FindSteam.cmake  FindVorbis.cmake  FindWindowsSDK.cmake  FindXF86VidMode.cmake  Findassimp.cmake  GetRevision.cmake  OSXToolChain.cmake  (+3 more)
code/TranslationManagerPlugin/: TranslationManagerPlugin.cbp
code/nel/: CMakeLists.txt  CMakePackaging.txt  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  config.h.cmake  configure.ac  nel-config.in  nel.sln
code/nel/CMakeModules/: FindDInput.cmake  FindDSound.cmake  FindGTK2.cmake  FindOgg.cmake  FindS3TC.cmake  FindSTLport.cmake  FindSquish.cmake  FindVorbis.cmake  FindXF86VidMode.cmake  FindXRandR.cmake  PCHSupport.cmake  nel.cmake
code/nel/doc/: Doxyfile.cmake.in  make_nel_dox.sh  make_neltools_dox.sh  make_packages_doc.sh  nel.hhp  nelns.dox  nelns.hhp  neltools.dox
code/nel/include/: CMakeLists.txt  Makefile.am
code/nel/rcerror/: CMakeLists.txt  rcerror.cpp  rcerror_data.h  rcerror_socket.cpp  rcerror_socket.h  rcerror_widget.cpp  rcerror_widget.h
code/nel/samples/: CMakeLists.txt  Makefile.am  all.sln
code/nel/src/: 3d.vcproj  CMakeLists.txt  Makefile  Makefile.am  Rules.mk  Variables.mk  cegui.vcproj  gen_deps.sh  georges.vcproj  ligo.vcproj  logic.vcproj  misc.vcproj  nel_vs90.vsprops  nel_vs90_d.vsprops  nel_vs90_d_dll.vsprops  nel_vs90_d_exe_console.vsprops  nel_vs90_d_exe_windows.vsprops  nel_vs90_d_lib.vsprops  nel_vs90_df.vsprops  nel_vs90_df_dll.vsprops  nel_vs90_df_exe_console.vsprops  nel_vs90_df_exe_windows.vsprops  nel_vs90_df_lib.vsprops  nel_vs90_ds.vsprops  nel_vs90_ds_dll.vsprops  nel_vs90_ds_exe_console.vsprops  nel_vs90_ds_exe_windows.vsprops  nel_vs90_ds_lib.vsprops  nel_vs90_r.vsprops  nel_vs90_r_dev.vsprops  nel_vs90_r_dll.vsprops  nel_vs90_r_exe_console.vsprops  nel_vs90_r_exe_windows.vsprops  nel_vs90_r_fv.vsprops  nel_vs90_r_lib.vsprops  nel_vs90_rd.vsprops  nel_vs90_rd_dll.vsprops  nel_vs90_rd_exe_console.vsprops  nel_vs90_rd_exe_windows.vsprops  nel_vs90_rd_lib.vsprops  (+9 more)
code/nel/tools/: CMakeLists.txt  Makefile.am  all.sln
code/nelns/: CMakeLists.txt  CMakePackaging.txt  INSTALL  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  services.dsw  services.sln
code/nelns/CMakeModules/: FindCEGUI.cmake  FindCppUnit.cmake  FindFreeType.cmake  FindGTK2.cmake  FindJpeg.cmake  FindMySQL.cmake  FindNeL3D.cmake  FindNeLMISC.cmake  FindNeLNET.cmake  nel.cmake
code/nelns/admin/: admin.vcproj  config.php
code/nelns/admin_executor_service/: CMakeLists.txt  Makefile.am  admin_executor_service.cfg  admin_executor_service.cpp  admin_executor_service.dsp  admin_executor_service.vcproj  log_report.cpp  log_report.h
code/nelns/admin_service/: CMakeLists.txt  Makefile.am  admin_service.cfg  admin_service.cpp  admin_service.dsp  admin_service.h  admin_service.vcproj  connection_web.cpp  connection_web.h
code/nelns/automacros/: mysql.m4
code/personal/: README.md
code/ryzom/: .hgignore  CMakeLists.txt  Makefile  Rules.mk  Variables.mk  config.h.cmake  gen_deps.sh
code/snowballs2/: AUTHORS  CMakeLists.txt  CMakePackaging.txt  INSTALL  Makefile.am  NEWS  acinclude.m4  autogen.sh  configure.ac  snowballs2.sln
code/studio/: CMakeLists.txt  ovqt_config.h.cmake
code/tool/: CMakeLists.txt  all.sln
nel/src/: CMakeLists.txt
nelns/: CMakeLists.txt  CMakePackaging.txt  README
nelns/admin_executor_service/: CMakeLists.txt  log_report.cpp  log_report.h
nelns/admin_service/: admin_service.cpp  admin_service.h  common.cfg  connection_web.cpp
nelns/login_service/: connection_client.cpp  connection_web.cpp  login_service.h  mysql_helper.cpp  mysql_helper.h
nelns/naming_service/: CMakeLists.txt  README.md  naming_service.cfg  naming_service.cpp  service_entry.h
nelns/tests/: CMakeLists.txt  naming_service.test.cpp
nelns/welcome_service/: welcome_service.cfg  welcome_service_itf.cpp  welcome_service_itf.h
ryzom/: CMakeLists.txt  tidy_config.txt
ryzom/client/: CMakeLists.txt  client.cfg  client_default.cfg
ryzom/server/: CMakeLists.txt  CMakePackaging.txt  README  admin_executor_service.cfg  admin_service_default.cfg  ags_test_service_default.cfg  ai_build_wmap.cfg  ai_data_service.cfg  ai_service_default.cfg  backup_service_interface.cfg  big_brother_service.cfg  changelog.template  common.cfg  config.h.cmake  dynamic_scenario_service.cfg  entities_game_service.cfg  entities_game_service_default.cfg  general_utilities_service_common.cfg  general_utilities_service_hub.cfg  general_utilities_service_shard.cfg  general_utilities_service_suk03.cfg  general_utilities_service_sus01.cfg  get_back_headers.py  gpm_service.cfg  gpm_service_default.cfg  gus_ce_chat_texts_en.txt  gus_test.cfg  input_output_service_default.cfg  logger_service.cfg  mail_forum_service.cfg  mail_forum_service_default.cfg  mirror_service.cfg  monitor_service.cfg  naming_service.cfg  nelDashBuild.sh  revision.h.in  scenario.cfg  session_browser_server.cfg  shard_unifier_service.cfg  shard_unifier_service_default.cfg  (+8 more)
ryzom/tools/: CMakeLists.txt
(+21135 files in other folders)
